Added migration and mysql client

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@ APP_NAME=hexa
 APP_PORT=8080
 APP_DEBUG=true
 
-POSTGRES_HOST=127.0.0.1
-POSTGRES_USER=user
-POSTGRES_PASSWORD=user
-POSTGRES_DATABASE=hexagonal
-POSTGRES_PORT=5432
-POSTGRES_SSL_MODE=disable
+DATABASES_MYSQL_HOST=127.0.0.1
+DATABASES_MYSQL_USER=root
+DATABASES_MYSQL_PASSWORD=password
+DATABASES_MYSQL_DATABASE=template
+DATABASES_MYSQL_PORT=3306
+DATABASES_MYSQL_SSLMODE=false
