--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 APP_NAME=hexa
-APP_PORT=8080
+APP_PORT=8000
 APP_DEBUG=true
+SHUTDOWN_TIME=10s
 
 DATABASES_MYSQL_HOST=127.0.0.1
 DATABASES_MYSQL_USER=root
@@ -8,3 +9,4 @@ DATABASES_MYSQL_PASSWORD=password
 DATABASES_MYSQL_DATABASE=template
 DATABASES_MYSQL_PORT=3306
 DATABASES_MYSQL_SSLMODE=false
+DATABASES_MYSQL_TIMEOUT=10s
